--- a/css/style.css
+++ b/css/style.css
@@ -150,20 +150,41 @@ button,
 
 .nav {
   color: #111026;
+  height: 106px;
 }
 .nav__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 30px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
 }
 .nav__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-transform: uppercase;
-  padding: 5px 0;
+  padding: 5px 10px;
   height: 100%;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.nav__item:hover {
+  background-color: #00B2FF;
+}
+.nav__item:hover .nav__link {
+  color: white;
 }
 .nav__link {
   font-size: clamp(12px, 2vw, 14px);
+  -webkit-transition: color 0.3s ease-in;
+  transition: color 0.3s ease-in;
+  color: #111026;
 }
 
 .buy {
@@ -175,7 +196,7 @@ button,
           align-items: center;
   gap: 10px;
   padding: 15px;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   border-radius: 15px;
   color: white;
   font-size: clamp(20px, 2vw, 22px);
@@ -189,11 +210,17 @@ button,
 .buy__link--blue:hover {
   background-color: rgba(0, 178, 255, 0.65);
 }
+.buy__link--blue:focus {
+  border-color: #111026;
+}
 .buy__link--red {
   background-color: #F02D59;
 }
 .buy__link--red:hover {
   background-color: rgba(240, 45, 89, 0.65);
+}
+.buy:focus {
+  border-color: #111026;
 }
 .buy__link--small {
   font-size: 18px;
@@ -213,6 +240,7 @@ button,
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 60px;
+  padding-bottom: 80px;
 }
 
 .slider {
@@ -224,7 +252,6 @@ button,
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  /* всё, что выходит за пределы .slider, будет скрыто родителем */
   -webkit-transition: -webkit-transform 0.5s ease;
   transition: -webkit-transform 0.5s ease;
   transition: transform 0.5s ease;
@@ -419,6 +446,7 @@ button,
   transition: background-color 0.3s ease;
   color: white;
   font-weight: bold;
+  border: 2px solid transparent;
 }
 .details__link--black {
   background-color: #111026;
@@ -522,10 +550,65 @@ button,
           flex-direction: column;
   gap: 25px;
 }
+.popular__item-status {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 15px;
+}
+.popular__action {
+  position: relative;
+  border-radius: 15px;
+  overflow: hidden;
+}
+.popular__action:hover .popular__filter {
+  opacity: 0.6;
+}
+.popular__action:hover .popular__content {
+  opacity: 1;
+}
+.popular__filter {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #111026;
+  opacity: 0;
+  -webkit-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
+  z-index: 2;
+}
+.popular__content {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 20px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  position: absolute;
+  top: 50%;
+  opacity: 0;
+  -webkit-transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease;
+  z-index: 3;
+}
 .popular__image {
   width: 100%;
   max-width: 300px;
-  border-radius: 15px;
+  z-index: 1;
 }
 
 .magazine {
@@ -827,6 +910,15 @@ button,
   overflow: scroll;
   font-size: 12px;
 }
+.instagram__description::-webkit-scrollbar {
+  background-color: #111026;
+  border-radius: 7px;
+  width: 7px;
+}
+.instagram__description::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 7px;
+}
 
 .partners {
   display: -webkit-box;
@@ -868,6 +960,177 @@ button,
   -ms-flex-pack: distribute;
       justify-content: space-around;
   padding: 0 10px;
+}
+
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: #F6FAFF;
+}
+.footer__wrapper {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 85px 72px;
+}
+.footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+  width: 100%;
+  max-width: 1096px;
+}
+.footer__main {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-size: 14px;
+  gap: 20px;
+}
+.footer__main-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 15px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  min-width: 0;
+}
+.footer__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+.footer__list-item a {
+  color: #8BA7C8;
+}
+.footer__social img {
+  width: 24px;
+}
+.footer__action {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 47px;
+}
+.footer__contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
+}
+.footer__contacts-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.footer__download {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 15px;
+}
+.footer__download-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 8px;
+}
+.footer__banner {
+  width: 30dvw;
+  height: 100%;
+  overflow: hidden;
+}
+.footer__banner img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.footer__since {
+  font-size: 12px;
+  color: #8BA7C8;
+}
+
+.call-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 15px;
+  padding: 15px;
+  border-radius: 15px;
+  background-color: #00B2FF;
+  -webkit-transition: background-color 0.3s ease-in;
+  transition: background-color 0.3s ease-in;
+  color: white;
+}
+.call-link:hover {
+  background-color: rgba(0, 178, 255, 0.65);
+}
+
+.subscribe-link {
+  padding: 10px 5px;
+  border: 1px solid #8BA7C8;
+  border-radius: 15px;
+  font-size: 12px;
+  color: #8BA7C8;
+  text-align: center;
+  -webkit-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
+}
+.subscribe-link:hover {
+  background-color: #8BA7C8;
+  color: white;
 }
 
 .hidden {
