--- a/css/style.scss
+++ b/css/style.scss
@@ -11,6 +11,8 @@ $color-blue: #00B2FF;
 $color-text-black: #111026;
 $color-red: #F02D59;
 $color-gray-light: #A3A3A3; 
+$color-footer-background: #F6FAFF;
+$color-footer-text: #8BA7C8;
 
 @font-face {
   font-family: 'Montserrat';
@@ -144,29 +146,41 @@ button,
 
 .nav{
     color: $color-text-black;
-
+    height:106px;
     &__list{
         display: flex;
-        gap: 30px;
+        align-items: center;
+        height: 100%;
     }
 
     &__item{
+        display: flex;
+        align-items: center;
         text-transform: uppercase;
-        padding: 5px 0;
+        padding: 5px 10px;
         height: 100%;
+        transition: all .3s ease-in-out;
+        &:hover{
+            background-color: $color-blue;
+            .nav__link{
+                color: white;
+            }
+        }
     }   
 
     &__link{
         font-size: clamp(12px, 2vw, 14px);
+        transition: color .3s ease-in;
+        color: $color-text-black;
     }
 }
 
 .buy {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 10px;  
     padding: 15px;
-    border: 1px solid transparent;
+    border: 2px solid transparent;
     border-radius: 15px;
     color: white;
     font-size: clamp(20px, 2vw , 22px);
@@ -177,13 +191,19 @@ button,
         &:hover{
             background-color: rgba($color-blue, 0.65);
         }
+         &:focus{
+            border-color: #111026;
+        }
     }
     &__link--red{
         background-color: $color-red;
          &:hover{
-            background-color: rgba($color-red, 0.65);
+             background-color: rgba($color-red, 0.65);
+            }
         }
-    }
+        &:focus{
+            border-color: #111026;
+        }
     &__link--small{
         font-size: 18px;
     }
@@ -197,6 +217,7 @@ button,
         display: flex;
         flex-direction: column;
         gap: 60px;
+        padding-bottom: 80px;
     }
 }
 
@@ -206,7 +227,6 @@ button,
     width: 100%;
     &__track{
         display: flex;
-        /* всё, что выходит за пределы .slider, будет скрыто родителем */
         transition: transform .5s ease;
     }
     &__image{
@@ -372,6 +392,7 @@ button,
     transition: background-color 0.3s ease;
     color: white;
     font-weight: bold;
+    border: 2px solid transparent;
     &__link--black {
       background-color: $color-text-black;
       &:hover {
@@ -450,12 +471,55 @@ button,
         display: flex;
         flex-direction: column;
         gap: 25px;
+        &-status{
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+    }
+
+    &__action{
+        position: relative;
+        border-radius: 15px;
+        overflow: hidden;
+        &:hover{
+        .popular__filter{
+            opacity: 0.6;
+        }
+        .popular__content{
+            opacity: 1;
+        }
+    }
+    }
+     &__filter{
+        position: absolute;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        background-color: $color-text-black;
+        opacity: 0;
+        transition: opacity .3s ease;
+        z-index: 2;
+    }
+    &__content{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 20px;
+        transform: translateY(-50%);
+        position: absolute;
+        top: 50%;
+        opacity: 0;
+        transition: opacity .3s ease;
+        z-index: 3;
     }
     &__image{
         width: 100%;
         max-width: 300px;
-        border-radius: 15px;
+        z-index: 1;
     }
+ 
 }
 
 .magazine {
@@ -625,7 +689,7 @@ button,
         position: absolute;
         top: 0; left: 0;
         width: 100%; height: 100%;
-        background-color: #111026;
+        background-color: $color-text-black;
         opacity: 0;
         transition: opacity .3s ease;
         z-index: 1;
@@ -664,8 +728,18 @@ button,
     &__description{
         width: 100%;
         height: 146px;
-        overflow: scroll;
+        overflow:scroll;
         font-size: 12px;
+        &::-webkit-scrollbar{
+            background-color:$color-text-black;
+            border-radius: 7px;
+            width: 7px;
+        }
+        &::-webkit-scrollbar-thumb{
+            background-color: white;
+            border-radius: 7px;
+        }
+        
     }
 
 }
@@ -691,6 +765,123 @@ button,
         align-items: center;
         justify-content: space-around;
         padding: 0 10px;
+    }
+}
+
+.footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: $color-footer-background;
+    &__wrapper{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 85px 72px;        
+    }
+    &__container{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        width: 100%; 
+        max-width: 1096px; 
+    }
+    &__main{
+        width:100%;
+        display: flex;
+        justify-content: space-between;
+        font-size: 14px;
+        gap: 20px;
+        &-item{
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            flex: 1;
+            min-width: 0;
+        }
+    }
+    &__list{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        &-item{
+            a{
+                color: $color-footer-text;
+            }
+            
+        }
+    }
+    &__social{
+        img{
+            width: 24px;
+        }
+    }
+    &__action{
+        display: flex;
+        flex-direction: column;
+        gap: 47px;
+    }
+    &__contacts{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        &-item{
+            display: flex;
+            align-items: center;
+        }   
+    }  
+    &__download{
+        display: flex;
+        gap: 15px;
+        &-item{
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+    }
+    &__banner{
+        width: 30dvw;
+        height: 100%;
+        overflow: hidden;
+        img{
+            object-fit: cover;
+        }
+    }
+    &__since{
+        font-size: 12px;
+        color: $color-footer-text;
+    }
+
+}
+
+.call-link{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    padding: 15px;
+    border-radius: 15px;
+    background-color: $color-blue;
+    transition: background-color .3s ease-in;
+    color: white;
+    &:hover{
+        background-color: rgba($color-blue, 0.65);
+    }
+
+}
+
+.subscribe-link{
+    padding: 10px 5px;
+    border: 1px solid $color-footer-text;
+    border-radius: 15px;
+    font-size: 12px;
+    color: $color-footer-text;
+    text-align: center;
+    transition: all .3s ease-in;
+    &:hover{
+        background-color: $color-footer-text;
+        color: white;
     }
 }
 
