--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,28 @@ button,
   color: #00b2ff;
 }
 
+.burger-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 30px;
+  gap: 5px;
+  cursor: pointer;
+}
+.burger-menu span {
+  width: 100%;
+  height: 3px;
+  background-color: #111026;
+  border-radius: 2px;
+}
+
 .nav {
   display: none;
   color: #111026;
